--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,2 @@
 [build]
-  command = "apt-get update && apt-get install -y ffmpeg nano zip unzip chromium ... && npm install"
+  command = "sudo apt-get update && sudo apt-get install -y ffmpeg nano zip unzip chromium ... && npm install"
